fix lack of rem in part of stylesheet

--- a/less/style.less
+++ b/less/style.less
@@ -547,13 +547,13 @@ div.searchbox {
     &::before {
       content: "❝";
       color: @mentioned;
-      font-size: 1.25;
+      font-size: 1.25rem;
       font-style: normal;
     }
     &::after {
       content: "❞";
       color: @mentioned;
-      font-size: 1.25;
+      font-size: 1.25rem;
       font-style: normal;
     }
   }
