add mag001: angler fish miscellaneous edits

--- a/less/style.less
+++ b/less/style.less
@@ -54,6 +54,7 @@ body {
   font-family: @font[body];
   font-size: 1rem;
   font-weight: 500;
+  scrollbar-gutter: stable;
 
   .padding(@space[median]);
 
@@ -148,16 +149,6 @@ h2 {
   text-align: center;
 
   .margin-bottom(@space[tiny]);
-
-  > [tooltip]::after {
-    font-size: .95rem!important;
-  }
-}
-h3 {
-  > [tooltip]::after {
-    font-size: .8rem!important;
-    .padding(@space[tiny]);
-  }
 }
 h3, h4, h5, h6 {
   color: @heading-3456;
@@ -255,6 +246,12 @@ button {
     @link: @text;
   }
 }
+b {
+  color: @bold;
+}
+i:not(button > i) {
+  color: @italic;
+}
 div {
   &.title {
     color: @strike;
@@ -278,6 +275,7 @@ dialog {
   border: solid .075rem @link;
   width: 50%;
   height: 75%;
+  overflow: hidden;
   box-shadow: 
       0px 5px fade(@contentshadow, 40%), 
       0px 10px fade(@contentshadow, 30%), 
@@ -286,6 +284,7 @@ dialog {
       0px 25px fade(@contentshadow, 5%);
 
   .rounded(@radia[little]);
+  .padding(@space[tiny]);
     
   &[open] {
     animation: fadein .75s ease-in-out normal;
@@ -303,13 +302,24 @@ dialog {
   .modal {
     justify-content: center;
     position: relative;
+    
+    width: 100%;
+    height: 100%;
 
     .flex.column(nowrap);
+    .padding(@space[nano]);
+  }
+  .scroll {
+    overflow-y: auto;
+    overscroll-behavior: contain;
+    scrollbar-width: thin;
+    scrollbar-gutter: both-edges;
+    .padding(@space[tiny]);
   }
   .close-modal {
     position: absolute;
-    top: -1.25rem;
-    left: -1.25rem;
+    top: -.65rem;
+    left: -.65rem;
   }
   button {
     color: @link;
@@ -343,7 +353,7 @@ dialog {
   .h3 {
     display: grid;
   }
-  h3 {
+  .h3 > h3 {
     position: relative;
     font-variant: small-caps;
     justify-self: center;
@@ -394,6 +404,9 @@ dialog {
       bottom: 1.25rem;
     }
   }
+  h2 {
+    font-size: 1.2rem;
+  }
   h5 {
     &:extend(.h3 > h3);
     .nickname {
@@ -411,6 +424,16 @@ dialog {
         font-size: inherit;
       }
     }
+  }
+  div.analysis {
+    .padding-horizontal(@space[none]);
+  }
+  p.analysis {
+    font-size: .9rem;
+    .padding(@space[none]);
+  }
+  [tooltip]::after {
+    background-color: @content!important;
   }
 }
 img {
@@ -578,9 +601,17 @@ div.searchbox {
   
   .margin-right(@space[tiny]);
 }
-.analysis {
+div.analysis {
+  .padding-top(@space[nano]);
+  .padding-vertical(@space[little]);
+}
+p.analysis {
   text-align: justify;
+  line-height: @space[big];
   
+  .padding-horizontal(@space[nano]);
+  .margin-bottom(@space[none]);
+
   &::before {
     content: '\2003';
   }
@@ -871,6 +902,13 @@ div.searchbox {
 .name, .h3 > h3 {
   font-family: @font[title]!important;
 }
+.tooltip {
+  text-decoration: .025rem dashed underline @link;
+  cursor: help;
+  > [tooltip]::after {
+    line-height: .95rem;
+  }
+}
 [tooltip] {
   position: relative;
   display: inline-block;
@@ -882,9 +920,9 @@ div.searchbox {
     top: -6px;
     left: 50%;
     transform: translateX(-50%);
-   // border-width: 4px 6px 0 6px;
-    //border-style: solid;
-    //border-color: hsla(@border, .7) transparent transparent     transparent;
+    border-width: 5px 7px 0 7px;
+    border-style: solid;
+    border-color: @text transparent transparent transparent;
     z-index: 99;
     opacity: 0;
     transition: @speed[4];
@@ -917,16 +955,19 @@ div.searchbox {
     transform: translateX(-50%)   translateY(-100%);
     background-color: @background!important;
     font-family: @font[title]!important;
+    border: @text .075rem solid;
     text-align: center;
     color: @text;
     padding: .25rem .125rem;
-    min-width: 5rem;
+    width: max-content;
+    max-width: 15rem;
     pointer-events: none;
     z-index: 99;
     opacity: 0;
     transition: @speed[3];
+    font-size: .75rem!important;
     .rounded(@space[tiny]);
-    .padding(@space[little]);
+    .padding(@space[tiny]);
 }
 [tooltip-position='left']::after{
   left: 0%;
@@ -1056,6 +1097,12 @@ div.searchbox {
       .margin-left(5.5%);
     }
   }
+  p {
+    font-size: .95rem;
+  }
+  h4 {
+    font-size: 1rem;
+  }
 }
 @media only screen and (min-width: @min-bigmobile) and (max-width: @max-smalltablet) {
   h1 {
@@ -1068,10 +1115,10 @@ div.searchbox {
     font-size: 1.15rem;
   }
   h4 {
-    font-size: 1.05rem;
+    font-size: 1rem;
   }
   p {
-    font-size: 1rem;
+    font-size: .95rem;
   }
   header {
     justify-content: space-between;
@@ -1083,11 +1130,6 @@ div.searchbox {
   }
   body {
     .padding(@space[tiny]);
-  }
-  .analysis {
-    &::before {
-      content: '\2002';
-    }
   }
   .synopsis {
     h4 {
@@ -1187,6 +1229,21 @@ div.searchbox {
       .margin-left(5.5%);
     }
   }
+  div.analysis {
+    .padding-top(@space[none]);
+    .padding-vertical(@space[tiny]);
+  }
+  p.analysis {
+    text-align: justify;
+    line-height: @space[big];
+    
+    .padding-horizontal(@space[nano]);
+    .margin-bottom(@space[none]);
+  
+    &::before {
+      content: '\2002\200E';
+    }
+  }
 }
 @media only screen and (max-width: @max-bigmobile) {
   h1 {
@@ -1200,7 +1257,7 @@ div.searchbox {
     font-size: 1.1rem;
   }
   p {
-    font-size: .95rem;
+    font-size: .9rem;
   }
   header {
     justify-content: space-between;
@@ -1219,11 +1276,6 @@ div.searchbox {
     h4 {
       font-size: .85rem;
       width: 100%;
-    }
-  }
-  .analysis {
-    &::before {
-      content: '\2002';
     }
   }
   main > aside {
@@ -1353,6 +1405,21 @@ div.searchbox {
   [tooltip-position='left']::before{
     left: 5%;
     transform: translatey(-50%) rotate(-90deg);
+  }
+  div.analysis {
+    .padding-top(@space[none]);
+    .padding-vertical(@space[nano]);
+  }
+  p.analysis {
+    text-align: justify;
+    line-height: @space[median];
+    
+    .padding-horizontal(@space[nano]);
+    .margin-bottom(@space[none]);
+  
+    &::before {
+      content: '\2002\200E';
+    }
   }
 }
 //// -------------
