--- a/less/fears.less
+++ b/less/fears.less
@@ -9,44 +9,83 @@ span {
     &#inevitability-abstract {
       color: @txt;
       background-color: #6f1a83;
+      b, i {
+        color: inherit;
+      }
     }
     &#lurk {
       background-color: #e24df3;
+      b, i {
+        color: inherit;
+      }
     }
     &#flaw {
       background-color: #982df8;
+      b, i {
+        color: inherit;
+      }
     }
     &#invasive {
       color: @txt;
       background-color: #3141da;
+      b, i {
+        color: inherit;
+      }
     }
     &#inevitability-concrete {
       background-color: #6bedf9;
+      b, i {
+        color: inherit;
+      }
     }
     &#oppressive-systems {
       background-color: #4df9b8;
+      b, i {
+        color: inherit;
+      }
     }
     &#physical-threat {
       background-color: #24ec34;
+      b, i {
+        color: inherit;
+      }
     }
     &#instability {
       background-color: #d3ec50;
+      b, i {
+        color: inherit;
+      }
     }
     &#mutilation {
       background-color: #f3f0ca;
+      b, i {
+        color: inherit;
+      }
     }
     &#guilt {
       background-color: #f7af66;
+      b, i {
+        color: inherit;
+      }
     }
     &#intimacy-lack {
       background-color: #f26749;
+      b, i {
+        color: inherit;
+      }
     }
     &#natural-forces {
       background-color: #d6345c;
+      b, i {
+        color: inherit;
+      }
     }
     &#stagnation {
       color: @txt;
       background-color: #81023d;
+      b, i {
+        color: inherit;
+      }
     }
     @txt: lighten(@text, 20%);
   }
