--- a/less/variables.less
+++ b/less/variables.less
@@ -1,99 +1,72 @@
-// LOOKUPS
-@space: {
-    none: 0rem;
-    nano: .25rem;
-    tiny: .5rem;
-    little: .75rem;
-    small: 1rem; 
-    median: 1.25rem;
-    big: 1.5rem;
-    large: 1.75rem;
-    huge: 2rem;
-    massive: 2.5;
-    immense: 3rem;
+// VARIABLES
+  // for media queries
+@min: {
+  320: ~"only screen and (min-width: 320px)";
+  480: ~"only screen and (min-width: 480px)";
+  600: ~"only screen and (min-width: 600px)";
+  768: ~"only screen and (min-width: 768px)";
+  992: ~"only screen and (min-width: 992px)";
+  1280: ~"only screen and (min-width: 1280px)";
+  1600: ~"only screen and (min-width: 1600px)";
+  1920: ~"only screen and (min-width: 1920px)";
 }
-  // -----
-@radia: {
-    none: 0rem;
-    nano: .25rem;
-    tiny: .5rem;
-    little: .75rem;
-    small: 1rem; 
-    median: 1.25rem;
-    big: 1.5rem;
-    large: 1.75rem;
-    huge: 2rem;
-    massive: 2.5;
-    immense: 3rem;
+@max: {
+  319: ~"only screen and (max-width: 320px)";
+  479: ~"only screen and (max-width: 480px)";
+  599: ~"only screen and (max-width: 600px)";
+  767: ~"only screen and (max-width: 768px)";
+  991: ~"only screen and (max-width: 992px)";
+  1279: ~"only screen and (max-width: 1280px)";
+  1599: ~"only screen and (max-width: 1600px)";
+  1919: ~"only screen and (max-width: 1920px)";
 }
-  // -----
-@speed: {
-    1: .1s;
-    2: .2s;
-    3: .3s;
-    4: .4s;
-    5: .5s;
+@minmax: {
+  600-991: ~"only screen and (min-width: 600px)";
 }
-  // -----
-@sizes: {
-  @min: {
-    mobile1: 320px;
-    mobile2: 480px;
-    tablet1: 600px;
-    tablet2: 768px;
-    laptop1: 992px;
-    laptop2: 1280px;
-    desktop1: 1600px;
-    desktop2: 1920px;
-  }
-  @max: {
-    mobile1: 319px;
-    mobile2: 479px;
-    tablet1: 599px;
-    tablet2: 767px;
-    laptop1: 991px;
-    laptop2: 1279px;
-    desktop1: 1599px;
-    desktop2: 1919px;
-  }
-    
-  } // aliases:
-@min-smallmobile: @sizes[@min][mobile1]; @min-bigmobile: @sizes[@min][mobile2];
-@min-smalltablet: @sizes[@min][tablet1]; @min-bigtablet: @sizes[@min][tablet2];
-@min-smalllaptop: @sizes[@min][laptop1]; @min-biglaptop: @sizes[@min][laptop2];
-@min-smalldesktop: @sizes[@min][desktop1]; @min-bigdesktop: @sizes[@min][desktop2];
-
-@max-smallmobile: @sizes[@max][mobile1]; @max-bigmobile: @sizes[@max][mobile2];
-@max-smalltablet: @sizes[@max][tablet1]; @max-bigtablet: @sizes[@max][tablet2];
-@max-smalllaptop: @sizes[@max][laptop1]; @max-biglaptop: @sizes[@max][laptop2];
-@max-smalldesktop: @sizes[@max][desktop1]; @max-bigdesktop: @sizes[@max][desktop2];
-// -------
-// COLORS
-  // typography
-    @text: hsl(160, 25%, 66%);
-    @bold: hsl(165, 19%, 54%);
-    @italic: hsl(165, 15%, 65%);
-    @strike: hsl(160, 10%, 50%);
-    @link: hsl(48, 50%, 75%);
-    @active: darken(saturate(@link, 5%), 10%);
-    @hover: darken(saturate(@link, 10%), 15%);
-    @heading-12: hsl(160, 60%, 60%);
-    @heading-3456: hsl(150, 41%, 53%);
-    @mentioned: hsl(160, 20%, 45%);
-  // elements
-    @background: hsl(282, 46%, 14%);
-    @content: hsl(277, 92%, 5%); 
-    @contentshadow: hsl(284, 45%, 10%); 
-    @border: hsl(282, 65%, 9%);
-// ------
-// FONTS
-    @font: {
-      /*body: 'Source Serif 4', serif;
-      nav: 'EB Garamond', serif;
-      heading: 'Platypi', serif;*/
-      title: 'Fraunces', serif;
-      body: 'Eczar', serif;
-      head: 'Grenze Gotisch', serif;
-      nav: 'Texturtina', serif;
-    }
+// -----------------
+  // fonts
+@font: {
+  title: 'Fraunces', serif;
+  body: 'Eczar', serif;
+  head: 'Grenze Gotisch', serif;
+  nav: 'Texturtina', serif;
+}
 // -----
+  // colors
+    // typography
+  @text: hsl(160, 25%, 66%);
+  @bold: hsl(165, 19%, 54%);
+  @italic: hsl(165, 15%, 65%);
+  @strike: hsl(160, 10%, 50%);
+  @link: hsl(48, 50%, 75%);
+  @active: darken(saturate(@link, 5%), 10%);
+  @hover: darken(saturate(@link, 10%), 15%);
+  @heading-12: hsl(160, 60%, 60%);
+  @heading-3456: hsl(150, 41%, 53%);
+  @mentioned: hsl(160, 20%, 45%);
+    // elements
+  @background: hsl(282, 46%, 14%);
+  @content: hsl(277, 92%, 5%); 
+  @contentshadow: hsl(284, 45%, 10%); 
+  @border: hsl(282, 65%, 9%);
+    // fears
+  @themes: {
+    @invtbl: {
+      a: hsl(253, 69%, 49%);
+      c: hsl(104, 80%, 62%);
+    }
+    @intmcy: {
+      y: hsl(309, 81%, 59%);
+      n: hsl(204, 90%, 62%);
+    }
+    lurk: hsl(293, 97%, 35%);
+    flaw: hsl(272, 87%, 54%);
+    stagnant: hsl(178, 89%, 60%);
+    guilt: hsl(151, 84%, 53%);
+    nature: hsl(5, 71%, 56%);
+    instability: hsl(64, 87%, 64%);
+    oppressive: hsl(30, 90%, 68%);
+    threat: hsl(348, 66%, 52%);
+    mutilation: hsl(334, 97%, 26%);
+  }
+// ------
